src/objects/Guest_slot_rating_details__x.object
<CustomObject>
    <description>Guest slot rating details</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$gst_slot_rating_dtl</externalName>
    <fields>
        <fullName>c_ent_by__c</fullName>
        <description>c_ent_by</description>
        <externalDeveloperName>c_ent_by</externalDeveloperName>
        <label>Ent by</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_game_cd__c</fullName>
        <description>c_game_cd</description>
        <externalDeveloperName>c_game_cd</externalDeveloperName>
        <label>Game code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prep_by__c</fullName>
        <description>c_prep_by</description>
        <externalDeveloperName>c_prep_by</externalDeveloperName>
        <label>Prep by</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>Property code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>Quality code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <externalDeveloperName>contact</externalDeveloperName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Guest slot rating details</relationshipLabel>
        <relationshipName>Guest_slot_rating_details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>d_end_time__c</fullName>
        <label>End Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_rating_date__c</fullName>
        <description>d_rating_date</description>
        <externalDeveloperName>d_rating_date</externalDeveloperName>
        <label>Rating date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_start_time__c</fullName>
        <externalDeveloperName>d_start_time</externalDeveloperName>
        <label>Start Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>Timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_trans_date__c</fullName>
        <description>d_trans_date</description>
        <externalDeveloperName>d_trans_date</externalDeveloperName>
        <label>Transaction date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_coin_in__c</fullName>
        <description>f_coin_in</description>
        <externalDeveloperName>f_coin_in</externalDeveloperName>
        <label>Coin in</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_coin_out__c</fullName>
        <description>f_coin_out</description>
        <externalDeveloperName>f_coin_out</externalDeveloperName>
        <label>Coin out</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_denom__c</fullName>
        <description>f_denom</description>
        <externalDeveloperName>f_denom</externalDeveloperName>
        <label>Denom</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_jackpot_amt__c</fullName>
        <description>f_jackpot_amt</description>
        <externalDeveloperName>f_jackpot_amt</externalDeveloperName>
        <label>Jackpot amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_play_time__c</fullName>
        <description>f_play_time</description>
        <externalDeveloperName>f_play_time</externalDeveloperName>
        <label>Play time</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_theo_win__c</fullName>
        <description>f_theo_win</description>
        <externalDeveloperName>f_theo_win</externalDeveloperName>
        <label>Theoretical win</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_winloss__c</fullName>
        <description>f_winloss</description>
        <externalDeveloperName>f_winloss</externalDeveloperName>
        <label>Winloss</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_cms_dmid__c</fullName>
        <description>i_cms_dmid</description>
        <externalDeveloperName>i_cms_dmid</externalDeveloperName>
        <label>winetId</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_handle_pulls__c</fullName>
        <description>i_handle_pulls</description>
        <externalDeveloperName>i_handle_pulls</externalDeveloperName>
        <label>Handle pulls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_mach_num__c</fullName>
        <description>i_mach_num</description>
        <externalDeveloperName>i_mach_num</externalDeveloperName>
        <label>Machine number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_rs_seq_num__c</fullName>
        <description>i_rs_seq_num</description>
        <externalDeveloperName>i_rs_seq_num</externalDeveloperName>
        <label>Rs sequence number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Guest slot rating details</label>
    <pluralLabel>Guest slot rating details</pluralLabel>
</CustomObject>